--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
